test/org/midica/testfiles/failing/opt-unknown.midica
INCLUDE inc/instruments.midica

( xyz=5
	0  c  /4
)
